package br.unitins.topicos1.dto.plataforma;


public record PlataformaDTO(
    
    String nome,
    long fabricante

) {
}
