package br.unitins.topicos1.dto.requisito;

public record RequisitoDTO(
    
    String armazenamento,
    String memoria,
    String processador,
    String placaVideo,
    String sistemaOperacional,
    Integer desempenho

) {
   
}
