@startuml Uml

class DefaultEntity{
    - id: Long
}

class Usuario{
    - nome: String
    - login: String
    - email: String
    - senha: String
    - cpf: String
    - dataNascimento: Date
}

class CartaoCredito{
    - numero: String
    - nomeTitular: String
    - dataValidade: Date
    - cvv: String
}

class MetodoPagamento{
    - idPedido: Pedido
    - totalPedido: Pedido
    - dataPagamento: Date
}


class Telefone{
    - codigoArea: String
    - numero: String
}

class Jogo{
    - nome: String
    - descricao: String
    - preco: Double
    - estoque: Integer
}

class Boleto{
    - codigoBarras: String
    - dataEmissao: Date
    - dataVencimento: Date
}

class Pix{
    - chave: String
}

class Endereco{
    - cep: String
    - logradouro: String
    - numero: String
    - complemento: String
    - bairro: String
}

class Cidade{
    - nome: String
}

class Estado{
    - nome: String
    - sigla: String
}

class Pedido{
    - dataCompra: Date
    - totalPedido: Double
    - itens : List<ItemPedido>
}

class ItemPedido{
    - quantidade: Integer
    - valor: Double

}

class Pais{
    - nome: String
    - sigla: String

}

class Desenvolvedora{
    - nome: String
    - cnpj: String
}


class Plataforma{
    nome: String
}

class Genero{
    nome: String
}


class Fabricante{
    nome: String
}


class Requisitos{
    processador: String
    memoria: String
    placaVideo: String
    sistemaOperacional: String
    armazenamento: String
}



Enum StatusPedido{
    PENDENTE: int
    PAGO: int
    CANCELADO: int
    ENVIADO: int
    ENTREGUE: int
}

Enum Classificacao{
    LIVRE: int
    DEZ: int
    DOZE: int
    QUATORZE: int
    DEZESSEIS: int
    DEZOITO: int
}

Enum TipoPix{
    Aleatoria: int
    CNPJ: int
}

Enum Perfil{
    ADMIN: int
    CLIENTE: int
}

Enum Desempenho{
    BAIXO: int
    MEDIO: int
    ALTO: int
}


Usuario "1" *---> "*" Endereco
Usuario "1" *---> "*" Telefone
Usuario "1" o---> "*" Jogo
Usuario "1" ---> "1" Perfil

Pedido "*" o---> "1" Usuario
Pedido "1" *--->"*" ItemPedido
Pedido "1" ---> "1" StatusPedido
Pedido "1" *---> "1" Endereco
Pedido "1" *---> "*" MetodoPagamento

ItemPedido "1" o---> "1" Jogo


Jogo "*" *---> "1" Desenvolvedora
Jogo "1" o---> "*" Genero
Jogo "1" o---> "*" Classificacao
Jogo "1" o---> "*" Plataforma
Jogo "1" o---> "*" Requisitos
Endereco "1" o--> "1" Cidade
Cidade "1" o--> "*" Estado

Desenvolvedora "1" o--> "*" Pais
Plataforma "1" o--> "*" Fabricante

Requisitos "1" o--> "*" Desempenho

Pix "1" --up-> "1" TipoPix
Boleto --|> MetodoPagamento
Pix --|> MetodoPagamento
CartaoCredito --|> MetodoPagamento


@enduml